--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container-fluid page">
+  <div class="page__box" p-3 mt-2>Home</div>
+  <div class="page__content position-relative">
+    <div class="page__content-data position-absolute text-center">
+          Home Content Goes Here
+    </div>
+  </div>
+</div>
